--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
         <!--    AR Painter  -->
         <script src="scn/paint_ar.js" type="module"></script>
+    
+        <!--    VR Enviroment  -->
+    <script src="scn/env_vr.js" type="module"></script>
 
 </body>
 
