--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--    <script src="scn/textShadow.js" type="module"></script>-->
 
         <!--    AR Painter  -->
-        <script src="scn/paint_ar.js" type="module"></script>
+<!--         <script src="scn/paint_ar.js" type="module"></script> -->
     
         <!--    VR Enviroment  -->
     <script src="scn/env_vr.js" type="module"></script>
