--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
 
 <head>
-    <title>Enviroment VR</title>
+    <title>3d basic stuff</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <!--    <link type="text/css" rel="stylesheet" href="main.css">-->
 
 </head>
 
 <body>
-    <div id="info">
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--12-col">
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="ar_paint.html">AR Paint</a>
+        </div>
+        <div class="mdl-cell mdl-cell--12-col">
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="vr_env.html">VR Enviroment</a>
+        </div>
+<!--
+        <div class="mdl-cell mdl-cell--12-col">
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="index.html">3D Scene</a>
+        </div>
+-->
     </div>
 
 
@@ -23,18 +37,18 @@
     <!--    <script src="scn/parametriceCube.js" type="module"></script>-->
 
     <!--    HDR env + широкоугольная камера с границами обзора + текст-->
-<!--        <script src="scn/envCam.js" type="module"></script>-->
+    <!--        <script src="scn/envCam.js" type="module"></script>-->
 
     <!--    HDR env + 360 камера + GLTF 3D модель-->
-<!--    <script src="scn/GLTF.js" type="module"></script>-->
+    <!--    <script src="scn/GLTF.js" type="module"></script>-->
 
     <!--    <script src="scn/textShadow.js" type="module"></script>-->
 
-        <!--    AR Painter  -->
-<!--         <script src="scn/paint_ar.js" type="module"></script> -->
-    
-        <!--    VR Enviroment  -->
-    <script src="scn/env_vr.js" type="module"></script>
+    <!--    AR Painter  -->
+    <!--    <script src="scn/paint_ar.js" type="module"></script>-->
+
+    <!--    VR Enviroment  -->
+<!--    <script src="scn/env_vr.js" type="module"></script>-->
 
 </body>
 
