--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="ar_paint.html">AR Paint</a>
         </div>
         <div class="mdl-cell mdl-cell--12-col">
-            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="ar_hit.html">AR Cones</a>
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="ar_hit.html">AR Hit</a>
         </div>
         <div class="mdl-cell mdl-cell--12-col">
             <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent mdl-js-ripple-effect" href="vr_env.html">VR Enviroment</a>
